[tool.poetry]
name = "langchain-chatbot"
version = "0.1.0"
description = "jerry's project of chatbot"
authors = ["jerry wan <jerry161212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.7"
streamlit = "^1.31.1"
langchain-openai = "^0.0.6"
chromadb = "^0.4.22"
langchain-community = "^0.0.21"
langchainhub = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
